added some test code

--- a/darksidesync/darksidesync.vcproj
+++ b/darksidesync/darksidesync.vcproj
@@ -184,6 +184,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\dss_test.lua"
+				>
+			</File>
+			<File
 				RelativePath=".\locking.c"
 				>
 			</File>
