completed new api structure, but now there seems to be an issue with c libraries using static variables (when a library is loaded by two concurrent luastates, they share the statics)

--- a/darksidesync/darksidesync.vcproj
+++ b/darksidesync/darksidesync.vcproj
@@ -180,6 +180,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\darksidesync_aux.c"
+				>
+			</File>
+			<File
 				RelativePath=".\dss.lua"
 				>
 			</File>
