fixed up a lot of the todo's, but there are more still...

--- a/darksidesync/darksidesync.vcproj
+++ b/darksidesync/darksidesync.vcproj
@@ -210,6 +210,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\darksidesync_api.h"
+				>
+			</File>
+			<File
 				RelativePath=".\locking.h"
 				>
 			</File>
