--- a/darksidesync/darksidesync.vcproj
+++ b/darksidesync/darksidesync.vcproj
@@ -232,6 +232,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\locking_sequence.txt"
+				>
+			</File>
+			<File
 				RelativePath="..\readme.txt"
 				>
 			</File>
