big update, adding calls to the api to enable returning arguments from Lua to the C callback function. additionally there are soma explicit casts added
code has still some todos;
1) adding a list for lua side items (userdatas)
2) fill in the waithandle code

--- a/darksidesync/darksidesync.vcxproj
+++ b/darksidesync/darksidesync.vcxproj
@@ -114,6 +114,7 @@
     <ClInclude Include="darksidesync_api.h" />
     <ClInclude Include="locking.h" />
     <ClInclude Include="udpsocket.h" />
+    <ClInclude Include="waithandle.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
