--- a/luaexit/luaexit.vcxproj.filters
+++ b/luaexit/luaexit.vcxproj.filters
@@ -18,6 +18,9 @@
     <ClCompile Include="luaexit.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\darksidesync\waithandle.c">
+      <Filter>Resource Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="luaexit_test.lua">
