implemented the waithandle code created the userdata list, to keep track of userdatas in case of async cancellation moved incorrect attached file from luaexit project to dss project

--- a/darksidesync/darksidesync.vcxproj
+++ b/darksidesync/darksidesync.vcxproj
@@ -100,6 +100,7 @@
     <ClCompile Include="darksidesync_aux.c" />
     <ClCompile Include="locking.c" />
     <ClCompile Include="udpsocket.c" />
+    <ClCompile Include="waithandle.c" />
   </ItemGroup>
   <ItemGroup>
     <None Include="debug.lua" />
