major refactor; 1) created new 'delivery' object containing all code for the lifecycle, much cleaner code now 2) removed the multiple mutexes and replaced by a single global mutex 3) renamed udpsocket and mutex objects to align better

--- a/darksidesync/darksidesync.vcxproj
+++ b/darksidesync/darksidesync.vcxproj
@@ -98,6 +98,7 @@
   <ItemGroup>
     <ClCompile Include="darksidesync.c" />
     <ClCompile Include="darksidesync_aux.c" />
+    <ClCompile Include="delivery.c" />
     <ClCompile Include="locking.c" />
     <ClCompile Include="udpsocket.c" />
     <ClCompile Include="waithandle.c" />
@@ -113,6 +114,7 @@
   <ItemGroup>
     <ClInclude Include="darksidesync.h" />
     <ClInclude Include="darksidesync_api.h" />
+    <ClInclude Include="delivery.h" />
     <ClInclude Include="locking.h" />
     <ClInclude Include="udpsocket.h" />
     <ClInclude Include="waithandle.h" />
