--- a/darksidesync/darksidesync.vcxproj.filters
+++ b/darksidesync/darksidesync.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClCompile Include="waithandle.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="delivery.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="debug.lua">
@@ -65,6 +68,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="waithandle.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="delivery.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
